Fix icon visibility

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -60,3 +60,7 @@ html {
 		margin: 1rem;
 	}
 }
+
+.hidden {
+	display: none !important;
+}
