--- a/src/components/ProjectsPage/ProjectsPage.scss
+++ b/src/components/ProjectsPage/ProjectsPage.scss
@@ -76,7 +76,7 @@
 				object-fit: cover;
 			}
 
-			.enlarge {
+			svg {
 				display: block;
 				position: absolute;
 				top: 50%;
@@ -86,13 +86,9 @@
 				border-radius: 5px;
 				padding: 1%;
 				transform: scale(2) translate(-25%, -40%);
-				opacity: 0;
 				cursor: pointer;
 				transition: all 0.1s ease-out;
-			}
-
-			.hidden {
-				display: none;
+				opacity: 0;
 			}
 
 			&.half-width {
@@ -110,7 +106,7 @@
 				}
 			}
 
-			&:hover .enlarge {
+			&:hover [class^='icon'] {
 				opacity: 0.5;
 				transition: all 0.1s ease-out;
 			}
